# roboburn

./: .gitignore  README.md
android/app/: AndroidManifest.xml  build.gradle  proguard-rules.pro
android/app/src/androidTest/java/com/twobitoperations/roboburn/: ApplicationTest.java  RetrofitTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/twobitoperations/roboburn/: Burn.java  BurnPlotHandler.java  BurnStatusHandler.java  BurnerControlService.java  DynamicSeries.java  MDNSDetector.java  SettingsActivity.java  TimerThread.java  mdns_detect.java
android/app/src/main/java/com/twobitoperations/roboburn/convert/: JacksonConverter.java
android/app/src/main/java/com/twobitoperations/roboburn/temp/: BurnerStatus.java  TempUtil.java  ThermocoupleRead.java
android/app/src/main/res/layout/: activity_burn.xml  activity_mdns_detect.xml
android/app/src/main/res/layout-land/: activity_burn.xml  spin_big.xml
android/app/src/main/res/layout-large-hdpi/: activity_burn.xml  spin_big.xml
android/app/src/main/res/menu/: burn.xml
android/app/src/main/res/values/: strings.xml  strings_activity_settings.xml
android/app/src/main/res/xml/: pref_general.xml  pref_headers.xml
android/gradle/wrapper/: gradle-wrapper.properties
roboburn-pi/: AddressFind.py  BurnerControl.py  TestAddressFind.py  Thermocouple.py  ThermocoupleTest.py  burn.py  requirements.txt
roboburn-pi-webapp/: .gitignore  README.md  app.py  background_workers.py  package-lock.json  package.json  pyproject.toml  webassets_config.py
roboburn-pi-webapp/templates/: index.html
